--- a/java110-spring-ioc/build.gradle
+++ b/java110-spring-ioc/build.gradle
@@ -6,6 +6,8 @@ plugins {
 }
 
 dependencies {
+    //인젝션관리 라이브러리
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
     //Spring IoC 컨테이너
     compile group: 'org.springframework', name: 'spring-context', version: '5.1.1.RELEASE'
     compile 'com.google.guava:guava:23.0'
